# rusty-ci

./: .gitignore  Cargo.toml  README.md  build.rs  install.sh  rusty_ci.yaml  test.yaml  update.sh
docs/: book.toml  index.html
docs/book/: index.html  installation.html  introduction.html  print.html  searchindex.js  searchindex.json  tldr.html  yaml.html
docs/book/usage/: build.html  help.html  install.html  setup.html  start.html  stop.html  usage.html  yaml.html
docs/src/: SUMMARY.md  installation.md  introduction.md  tldr.md  yaml.md
docs/src/usage/: binary.md  build.md  help.md  install.md  setup.md  start.md  stop.md  usage.md  yaml.md
examples/: Makefile  test.yaml
examples/basic/: auth.token  basic.yaml  install.sh  mail.yaml
examples/example_1/: example_1.yaml
examples/xasm/: mail.yaml  xasm.yaml
src/: bin.rs  builder.rs  lib.rs  makefile.rs  masterconfig.rs  scheduler.rs  step.rs  worker.rs
src/buildbot/: builder.rs  mail.rs  masterconfig.rs  merge.rs  mod.rs  scheduler.rs  step.rs  worker.rs
src/buildsystem/: bash.rs  buildsystem.rs  default.rs  makefile.rs  mod.rs  quiet.rs  system.rs
src/helper/: cmd.rs  file.rs  mod.rs  stdio.rs  string.rs  yaml.rs
tests/: builder.rs  cmd.rs  mail.rs  scheduler.rs  step.rs  string.rs  worker.rs  yaml.rs
