[package]
name = "rusty-ci"
version = "0.2.1"
authors = ["adam-mcdaniel <adam.mcdaniel17@gmail.com>"]
edition = "2018"
license-file = "LICENSE"
readme = "README.md"
description = "A tool to generate buildbot projects from a YAML file"
homepage = "https://github.com/adam-mcdaniel/rusty-ci"
repository = "https://github.com/adam-mcdaniel/rusty-ci"

# Added bin target
[[bin]]
name = "rusty-ci"
path = "src/bin.rs"


# Build step tests
[[test]]
name = "step"
path = "tests/step.rs"


[dependencies]
rusty-yaml="0.2.0"