[package]
name = "rusty-ci"
version = "0.4.8"
authors = ["adam-mcdaniel <adam.mcdaniel17@gmail.com>"]
edition = "2018"
license-file = "LICENSE"
readme = "README.md"
description = "A tool to generate buildbot projects from a YAML file"
documentation = "https://docs.rs/rusty-ci"
homepage = "https://github.com/adam-mcdaniel/rusty-ci"
repository = "https://github.com/adam-mcdaniel/rusty-ci"

# Added bin target
[[bin]]
name = "rusty-ci"
path = "src/bin.rs"


# Build step tests
[[test]]
name = "step"
path = "tests/step.rs"


[dependencies]
rusty-yaml = "0.5.0"
clap = "2.33"
termcolor = "1.0.5"