[package]
name = "rusty-ci"
version = "0.8.2"
authors = ["adam-mcdaniel <adam.mcdaniel17@gmail.com>"]
edition = "2018"
license = "Apache-2.0"
readme = "README.md"
description = "A tool to generate buildbot projects from a YAML file"
documentation = "https://docs.rs/rusty-ci"
homepage = "https://github.com/adam-mcdaniel/rusty-ci"
repository = "https://github.com/adam-mcdaniel/rusty-ci"

# Added bin target
[[bin]]
name = "rusty-ci"
path = "src/bin.rs"


# Build step tests
[[test]]
name = "step"
path = "tests/step.rs"

# Builder tests
[[test]]
name = "builder"
path = "tests/builder.rs"

# Worker tests
[[test]]
name = "scheduler"
path = "tests/scheduler.rs"

# Mail configuration tests
[[test]]
name = "mail"
path = "tests/mail.rs"


[dependencies]
rand = "0.7"
rusty-yaml = "0.4.3"
clap = "2.33"
termcolor = "1.0.5"
